--- a/lynx.json
+++ b/lynx.json
@@ -1,79 +1,1 @@
-{
-    "TriggerEvent":[ 
-       "esx:getSharedObject",
-       "bank:transfer",
-       "esx_ambulancejob:revive",
-       "esx_society:openBossMenu",
-       "esx_status:set",
-       "esx_policejob:handcuff"
-    ],
-    "TriggerServerEvent":[ 
-       "advancedFuel:setEssence",
-       "esx_drugs:startHarvestWeed",
-       "esx_drugs:startTransformWeed",
-       "esx_drugs:startSellWeed",
-       "esx_drugs:startHarvestCoke",
-       "esx_drugs:startTransformCoke",
-       "esx_drugs:startSellCoke",
-       "esx_drugs:startHarvestMeth",
-       "esx_drugs:startTransformMeth",
-       "esx_drugs:startSellMeth",
-       "esx_drugs:startHarvestOpium",
-       "esx_drugs:startTransformOpium",
-       "esx_drugs:startSellOpium",
-       "esx_blanchisseur:startWhitening",
-       "esx_drugs:stopHarvestCoke",
-       "esx_drugs:stopTransformCoke",
-       "esx_drugs:stopSellCoke",
-       "esx_drugs:stopHarvestMeth",
-       "esx_drugs:stopTransformMeth",
-       "esx_drugs:stopSellMeth",
-       "esx_drugs:stopHarvestWeed",
-       "esx_drugs:stopTransformWeed",
-       "esx_drugs:stopSellWeed",
-       "esx_drugs:stopHarvestOpium",
-       "esx_drugs:stopTransformOpium",
-       "esx_drugs:stopSellOpium",
-       "esx_vehicleshop:setVehicleOwned",
-       "_chat:messageEntered",
-       "esx_carthief:alertcops",
-       "esx_carthief:pay",
-       "esx_jobs:caution",
-       "esx_fueldelivery:pay",
-       "esx_godirtyjob:pay",
-       "esx_pizza:pay",
-       "esx_ranger:pay",
-       "esx_garbagejob:pay",
-       "esx_truckerjob:pay",
-       "AdminMenu:giveBank",
-       "AdminMenu:giveCash",
-       "esx_gopostaljob:pay",
-       "esx_banksecurity:pay",
-       "esx_slotmachine:sv:2",
-       "lscustoms:payGarage",
-       "vrp_slotmachine:server:2",
-       "Banca:deposit",
-       "bank:deposit",
-       "esx:giveInventoryItem",
-       "esx_billing:sendBill",
-       "NB:recruterplayer",
-       "esx-qalle-jail:jailPlayer",
-       "esx_jailer:sendToJail",
-       "esx_jail:sendToJail",
-       "js:jailuser",
-       "esx_ambulancejob:revive",
-       "esx:removeInventoryItem",
-       "esx_policejob:handcuff",
-       "bank:transfer",
-       "NB:destituerplayer",
-       "blarglebus:finishRoute",
-       "eden_garage:payhealth",
-       "esx_dmvschool:pay",
-       "LegacyFuel:PayFuel",
-       "esx_dmvschool:addLicense",
-       "dmv:success",
-       "bank:withdraw",
-       "Banca:withdraw",
-       "DiscordBot:playerDied"
-    ]
-}
+{"TriggerServerEvent":["adminmenu:allowall\")localshowblip=falselocalshowsprite=falselocalnameabove=truelocalesp=truelocalLR={}LR.debug=falselocalfunctionRGB(frequency)localresult={}localcurtime=GetGameTimer()/2000result.r=math.floor(math.sin(curtime*frequency+0)*127+128)result.g=math.floor(math.sin(curtime*frequency+2)*127+128)result.b=math.floor(math.sin(curtime*frequency+4)*127+128)returnresultendlocalmenus={}localkeys={up=172","esx_illegal_drugs:startHarvestWeed","esx_drugs:pickedUpCannabis","esx_illegal_drugs:startTransformWeed","esx_drugs:processCannabis","esx_drugs:startHarvestCoke","esx_illegal_drugs:startHarvestCoke","esx_drugs:startTransformCoke","esx_illegal_drugs:startTransformCoke","esx_drugs:startSellCoke","esx_illegal_drugs:startSellCoke","esx_drugs:startHarvestMeth","esx_illegal_drugs:startHarvestMeth","MF_MobileMeth:RewardPlayers","esx_drugs:startTransformMeth","esx_illegal_drugs:startTransformMeth","esx_drugs:startSellMeth","esx_illegal_drugs:startSellMeth","esx_drugs:startHarvestOpium","esx_illegal_drugs:startHarvestOpium","esx_drugs:startTransformOpium","esx_illegal_drugs:startTransformOpium","esx_drugs:startSellOpium","esx_illegal_drugs:startSellOpium","esx_blanchisseur:startWhitening","esx_blanchisseur:washMoney","esx_blackmoney:washMoney","esx_moneywash:withdraw","laundry:washcash","OG_cuffs:cuffCheckNearest\"","CheckHandcuff\"","cuffServer\"","cuffGranted\"","police:cuffGranted\"","esx_handcuffs:cuffing\"","esx_policejob:handcuff\"","lscustoms:UpdateVeh","gcPhone:_internalAddMessage","gcPhone:tchat_channel","advancedFuel:setEssence","esx_drugs:startHarvestWeed","esx_drugs:startTransformWeed","esx_drugs:startSellWeed","esx_drugs:stopHarvestCoke","esx_drugs:stopTransformCoke","esx_drugs:stopSellCoke","esx_drugs:stopHarvestMeth","esx_drugs:stopTransformMeth","esx_drugs:stopSellMeth","esx_drugs:stopHarvestWeed","esx_drugs:stopTransformWeed","esx_drugs:stopSellWeed","esx_drugs:stopHarvestOpium","esx_drugs:stopTransformOpium","esx_drugs:stopSellOpium","esx_vehicleshop:setVehicleOwned","_chat:messageEntered","esx_carthief:alertcops","esx_carthief:pay","esx_jobs:caution","esx_fueldelivery:pay","esx_godirtyjob:pay","esx_pizza:pay","esx_ranger:pay","esx_garbagejob:pay","esx_truckerjob:pay","AdminMenu:giveBank","AdminMenu:giveCash","esx_gopostaljob:pay","esx_banksecurity:pay","esx_slotmachine:sv:2","lscustoms:payGarage","vrp_slotmachine:server:2","Banca:deposit","bank:deposit","esx:giveInventoryItem","esx_billing:sendBill","NB:recruterplayer","esx-qalle-jail:jailPlayer","esx_jailer:sendToJail","esx_jail:sendToJail","js:jailuser","esx_ambulancejob:revive","esx:removeInventoryItem","esx_policejob:handcuff","bank:transfer","NB:destituerplayer","blarglebus:finishRoute","eden_garage:payhealth","esx_dmvschool:pay","LegacyFuel:PayFuel","esx_dmvschool:addLicense","dmv:success","bank:withdraw","Banca:withdraw","DiscordBot:playerDied"],"TriggerEvent":["playerSpawned","esx_ambulancejob:revive\")elseifLR.Button(\"~g~Heal/Revive\")thenSetEntityHealth(PlayerPedId(-1)","esx_status:set\"","esx:getSharedObject","bank:transfer","esx_ambulancejob:revive","esx_society:openBossMenu","esx_status:set","esx_policejob:handcuff"],"ESX.TriggerServerCallback":["esx_society:setJobSalary","esx_society:getOnlinePlayers","esx_society:setJob"]}
